# eicsmeardetectors

./: .gitignore  BuildByName.cxx  CMakeLists.txt  CaloTester.cxx  Doxyfile  JLEICDetector.cxx  README.md  SmearBeAST_0_0.cxx  SmearBeAST_0_1.cxx  SmearCore_0_1.cxx  SmearCore_0_1_B3T.cxx  SmearHandBook_1_2.cxx  SmearJLEIC_0_1.cxx  SmearMatrixDetector_0_1.cxx  SmearMatrixDetector_0_1_FF.cxx  SmearMatrixDetector_0_1_JHFCalo.cxx  SmearMatrixDetector_0_1_PID.cxx  SmearMatrixDetector_0_1_TOF.cxx  SmearMatrixDetector_0_2_B1_5T.cxx  SmearMatrixDetector_0_2_B3T.cxx  SmearPerfectDetector.cxx  SmearSTAR_0_0.cxx  SmearTrackingPreview_0_2_B1_5T.cxx  SmearTrackingPreview_0_2_B3T.cxx  SmearWithTof.cxx  SmearZEUS_0_0.cxx  SmearePHENIX_0_0.cxx  SmeareSTAR_0_0.cxx  eicsmeardetectors.hh
cint/: LinkDef.h
piddetectors/: DircBarrelSmearer.h  DrcPidFast.cxx  DrcPidFast.h  TofBarrelSmearer.h  barrelDirc.C  barrelDirc.h  ctr_map_p1_0.95.root  ctr_map_p2_0.95.root  tofBarrel.C  tofBarrel.h
tests/: ffqaplots.cxx  ffqaplots.hh  particlegun.cxx  pgunqa.cxx  qaplots.cxx  qaplots.hh  test_simple_buildtree.cxx
